<resources>
    <string name="app_name">Bluetooth Alert</string>
    <string name="ok">OK</string>
    <string name="location_access_required">Yêu cầu quyền truy cập vị trí.</string>
    <string name="location_unavailable"><center><b>Chưa cho phép hệ thống truy cập vị trí.</b>\nHệ thống không thể hoạt động đúng.</center></string>
    <string name="location_permission_available"><b>Đã truy cập được vị trí.</b>\nHệ thống đang quét thiết bị xung quanh…</string>
    <string name="thong_tin">Thông tin</string>
    <string name="scan_bluetooth">Scan Bluetooth</string>
    <string name="on_off">ON/OFF</string>
    <string name="lich_su_tiep_xuc">Lịch sử tiếp xúc</string>
    <string name="ho_tro">Hỗ trợ</string>
    <string name="thiet_bi_xung_quanh" />
    <string name="bluetooth">Bluetooth</string>


</resources>